--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "scripts": {
-    "start": "bun src/index.js"
+    "start": "bun src/index.js",
+    "dev": "bun src/index.js"
   },
   "dependencies": {
     "express": "^4.21.2",
